# isrupin

./: BUILD.txt  CMakeLists.txt  LICENSE  PIN_VERSION  README  TODO  isr.conf  pin-2.13-config.cmake  pin-config.cmake  setup.sh
dyboc/libpmalloc/: Makefile  README  checker.c  checker.h  main.c  pmalloc.c  pmalloc.h  whitelist.c  whitelist.h  wrappers.c
dyboc/libpmalloc/tests/: Makefile  calloc.c  exhaust.c  malloc.c  memalign.c  over.c  realloc.c
dyboc/monitor/: Makefile  child.c  child.h  monitor.c  monitor.h  notify.c
dyboc/monitor/tests/: Makefile  exec.c  fork.c  fork_over.c  fork_under.c  overflow.c  simple.c  simple_over.c  simple_under.c  underflow.c
exec_wrapper/: exec_wrapper.c
include/: log.hpp
launch_wrappers/: mysqld_safe
libcrossdev/: CMakeLists.txt  libcrossdev-config.cmake  libcrossdev.hpp
libcrossdev/windows/: Makefile
libisr/: image.hpp  libisr.cpp  sortedvector.cpp
other_tools/: cprofile.cpp  regs.cpp
paper/: common-packages.tex  paper.bbl  paper.bib  paper.blg  paper.tex  related.tex
patches/: objcopy-2.21.1-isr.patch
preassure/: Makefile
preassure/pass/: Makefile  preassure.cpp
preassure/tests/: Makefile  test1.c  test2.c
scripts/: functions.sh  isrdepsencode  isrencode  isrexec  isrexecenc  isrlibencode  isrremove
sqlite3/: CMakeLists.txt  VERSION  libsqlite3-config.cmake
tests/bad_access/: Makefile
tests/diehard/: Makefile  mymalloc.c  simple_alloc.c
tests/fork/: Makefile  fork.c
tests/mmap/: mremap.c  munmap_partial.c  zero_file
tests/pin_isolation/: bad.c  null.cpp
tests/pin_socketpair/: Makefile  launch_ssh  spair.c
tests/reassure/: Makefile
tests/rtn_chaining/: rtn.c  rtn.conf
tests/self_inject/: Makefile  sc.S  sinject.c
tests/thread_fork/: thread_fork.c
tests/timeout/: exec.c
thering/: BUILD.txt  CMakeLists.txt  LICENSE  MINESTRONE.txt  PIN_VERSION  pin-config.cmake  reassure_demo.conf  setup.sh  tainted_files_demo.conf  thering.conf
thering/conf/: ffmp.conf  gimp.conf  ossl.conf  psql.conf  subv.conf  wire.conf
thering/exec_wrapper/: CMakeLists.txt  exec_wrapper.c
thering/include/: compiler.h  log.hpp
thering/libcrossdev/: CMakeLists.txt
thering/libcrossdev/linux/: Makefile  libcrossdev.cpp
thering/libcrossdev/windows/: libcrossdev.cpp  libcrossdev.hpp
thering/libdft_linux-amd64/: CMakeLists.txt  VERSION  libdft_api.c  libdft_api.h  libdft_core.c  libdft_core.h  syscall_desc.c  syscall_desc.h  tagmap.c  tagmap.h
thering/libdft_linux-i386/: libdft-config.cmake  libdft_api.c  libdft_api.h  libdft_core.h  syscall_desc.c  tagmap.c
thering/libisr/: CMakeLists.txt  image.cpp  libisr-config.cmake  libisr.cpp  libisr.hpp
thering/libminestrone/: CMakeLists.txt  libminestrone-config.cmake  libminestrone.hpp  minestrone_opts.hpp  notify.cpp  watchdog.cpp  watchdog_opts.hpp
thering/libreassure/: CMakeLists.txt  conftest.cpp  debug.h  libreassure-config.cmake  libreassure.cpp  libreassure.hpp  writeslog.cpp  writeslog.h
thering/other_tools/: CMakeLists.txt
thering/reassure_conf/: ffmp.conf  gimp.conf  psql.conf  subv.conf  wire.conf
thering/scripts/: isrcompleteprep  isrdepsencode  isrencode  isrremove
thering/sqlite/: CMakeLists.txt  VERSION
thering/sqlite3/: CMakeLists.txt
thering/tests/bad_access/: bad.c
thering/tests/fork/: Makefile  fork.c  fork2.c  fork3.c
thering/tests/mmap/: Makefile  mmap_overlap.c  one_file
thering/tests/pin_isolation/: Makefile
thering/tests/pin_socketpair/: makefile.pin  tricky.cpp
thering/tests/rtn_chaining/: Makefile
thering/tests/self_inject/: sc
thering/tests/stack_overflow_ret/: Makefile  attack.sh  bad.c  pin_victim.sh  run_victim.sh  victim.c
thering/tests/thread_fork/: Makefile  tf.conf
thering/tests/timeout/: Makefile  fork.c
thering/tools/: CMakeLists.txt  cmdln.hpp  dta_tool.cpp  dta_tool.hpp  dta_tool_opts.hpp  isr_wrapper.cpp  reassure_opts.hpp  thering.cpp  thering_opts.hpp
tools/: CMakeLists.txt  cmdln.cpp  isr_opts.hpp  isr_wrapper.cpp  isrtool.cpp
